--- a/.github/workflows/workflow_unit_tests.yml
+++ b/.github/workflows/workflow_unit_tests.yml
@@ -1,5 +1,5 @@
 
-name: Build and Unit tests
+name: Build and Run Unit tests
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
     - name: Setup .NET v 6.0
       uses: actions/setup-dotnet@v4
@@ -20,7 +20,7 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build .Net
+    - name: Set up .Net
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet Homies.UnitTests/Homies.UnitTests.csproj --no-build --verbosity normal
+    - name: Execute Unit Tests
+      run: dotnet test Homies.UnitTests/Homies.UnitTests.csproj --no-build --verbosity normal
